<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.startapp.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/logobt"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/padding_3"/>
                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingTop="@dimen/padding_3"
                    android:paddingStart="16dp"
                    android:text="@string/cancel"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_intro_join_us"
                    android:textColor="@color/black"
                    android:textSize="@dimen/padding_3"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_logo"
                    app:layout_constraintBottom_toBottomOf="@id/iv_logo"
                    tools:ignore="SpUsage" />
                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_welcome">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/contraint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/et_user"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:startIconDrawable="@drawable/user"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"
                                />

                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lienar2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@id/contraint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/et_email_joinus"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/contraint"
                            android:hint="@string/email"
                            app:startIconDrawable="@drawable/email"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_email_joinus1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lienar3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lienar2"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    >
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/et_password_joinus"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:endIconMode="password_toggle"
                            app:startIconDrawable="@drawable/lock"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_password_joinus1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                />

                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lienar4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lienar3"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    >
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/et_password_confirm"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/cofirm_password"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:endIconMode="password_toggle"
                            app:startIconDrawable="@drawable/lock"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_password_confirm1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/bt_join_us"
                    android:layout_width="300dp"
                    android:layout_height="52dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lienar4"
                    android:layout_marginTop="20dp"
                    android:text="@string/join_us"
                    android:textSize="16sp"
                    android:backgroundTint="@color/colorApp"/>
                <TextView
                    android:id="@+id/have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bt_join_us"
                    android:text="@string/have_account"
                    android:paddingTop="@dimen/padding_3"
                    android:clickable="true"
                    android:textSize="@dimen/padding_2"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>